remove console log. fix z-index

--- a/newamericadotorg/assets/react/report/components/Social.scss
+++ b/newamericadotorg/assets/react/report/components/Social.scss
@@ -1,7 +1,7 @@
 .report__social__item{
    display: inline-block;
    position: relative;
-   z-index: 1000;
+   z-index: 5;
 
    .fa, h6 {
      display: inline-block;
